Closed
Bug 1466860
Opened 4 years ago
Closed 4 years ago
TRR: update to latest DOH draft version
Categories
(Core :: Networking: DNS, defect, P2)
Core
Networking: DNS
Tracking
()
RESOLVED
FIXED
mozilla63
People
(Reporter: bagder, Assigned: bagder)
Details
(Whiteboard: [necko-triaged][trr])
Attachments
(1 file)
46 bytes,
text/x-phabricator-request
|
mcmanus
:
review+
lizzard
:
approval-mozilla-beta+
|
Details | Review |
Currently Firefox runs a version of the DNS-over-HTTPS protocol that matches the -04 version of the draft (https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-04) but there have been several changes to it since. Including: - The query string used in GET requests - The Content-Type set in requests - The accepted Content-Type in responses Needs to take Bug 1446404 into consideration and also the implementation state of the end-points existing users are most likely using.
Assignee | ||
Comment 1•4 years ago
|
||
MozReview-Commit-ID: FSVh7qUbBig
Assignee | ||
Comment 2•4 years ago
|
||
Server interop status Cloudflare: check Google: nope (awaiting answer on specifics)
Comment 3•4 years ago
|
||
Comment on attachment 8998111 [details] bug 1466860 - upgrade DOH code to draft-12 level Patrick McManus [:mcmanus] has approved the revision. https://phabricator.services.mozilla.com/D2828
Attachment #8998111 -
Flags: review+
Pushed by daniel@haxx.se: https://hg.mozilla.org/integration/autoland/rev/b493b05dcbd5 upgrade DOH code to draft-12 level r=mcmanus
Comment 5•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/b493b05dcbd5
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Comment 6•4 years ago
|
||
Is this something that can ride the trains or does it need a Beta uplift request?
Flags: needinfo?(daniel)
Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 8998111 [details] bug 1466860 - upgrade DOH code to draft-12 level Thanks for asking. I'm requesting an uplift of this to keep the DoH-support in 62 at fine level. Approval Request Comment [Feature/Bug causing the regression]: [User impact if declined]: This patch ups Firefox' DoH support to the latest spec draft, which is the one likely to ship as RFC soon. The wire format is not expected to change anything further. [Is this code covered by automated tests?]: Yes, and this patch updates the test. [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: no [Why is the change risky/not risky?]: The change is simple and there are very few users of DoH on 62, and they've all opted in via manual prefs edits. [String changes made/needed]: none
Flags: needinfo?(daniel)
Attachment #8998111 -
Flags: approval-mozilla-beta?
Comment on attachment 8998111 [details] bug 1466860 - upgrade DOH code to draft-12 level Keeping 62 opt-in users to the newest spec sounds good to me. Let's uplift for beta 18.
Attachment #8998111 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
![]() |
||
Comment 9•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/e8db9f7d2225
You need to log in
before you can comment on or make changes to this bug.
Description
•