bug 1466860 - upgrade DOH code to draft-12 level r=mcmanus a=lizzard

MozReview-Commit-ID: FSVh7qUbBig

Differential Revision: https://phabricator.services.mozilla.com/D2828